test(schedule): 상태전이 시나리오를 누적 최종 상태 단언으로 재구성 (HM-226)
PR #7 리뷰를 반영한다.
- 수정을 되돌려도 통과하던 단언(리뷰 2): 배정 이력 전체를 일정·결과·
  배정 시각·응답 시각 단위로 단언한다. cancel()의 대기 배정 마감을
  되돌리면 실패하는 것을 확인했다.
- WorkTest#cancelsAllowedStatus와 중복된 단계별 취소 4건(리뷰 4)을
  지우고, 여러 변경을 거친 뒤의 누적 상태를 보는 시나리오로 바꾼다.
- 정책 결정에 따른 흐름을 추가한다: 수락 후 재배정·일정 변경의 재수락,
  수락된 배정 해제 후 재배정, 응답 전 변경을 거친 취소, 작업중 취소.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>